auth-service/base/service.yaml
---
{
  apiVersion: "v1",
  kind: "Service",
  metadata: {
    name: "auth-service",
    labels: {
      app: "auth-service",
    },
  },
  spec: {
    selector: {
      app: "auth-service",
    },
    ports: [{
      port: 8080,
      targetPort: 8080,
      name: "http",
    }],
  },
}
